# ScenTrace

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  scenetrace.yml
.scenetrace/: .env.example  .gitignore  example_scenario.yaml
examples/: basic_scenario.yaml  check_has_greeting.py  invalid_scenario.yaml
src/scen_trace/: analytics.py  baselines.py  checks.py  cli.py  plugins.py  report.py  runner.py  scaffold.py  schema.py  server.py  validator.py
src/scen_trace/providers/: __init__.py  loader.py  mock.py  openai.py
src/scen_trace/templates/: dashboard.html
tests/: test_analytics.py  test_baselines.py  test_checks.py  test_cli.py  test_plugins.py  test_providers.py  test_report.py  test_runner.py  test_scaffold.py  test_schema.py  test_server.py
